syntax = "proto3";
package coreum.asset.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/CoreumFoundation/coreum/x/asset/types";

enum FungibleTokenFeature {
  freeze = 0;
  mint = 1;
  burn = 2;
}

// FungibleTokenDefinition defines the fungible token settings to store.
message FungibleTokenDefinition {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.equal) = false;
  string denom = 1;
  string issuer = 2;
  repeated FungibleTokenFeature features = 3;
}

// FungibleToken is a full representation of the fungible token.
message FungibleToken {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  string denom = 1;
  string issuer = 2;
  string symbol = 3;
  string description = 4;
  repeated FungibleTokenFeature features = 5;
}

// NonFungibleToken is a full representation of the non fungible token.
message NonFungibleToken {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;
  string id = 1;
  string issuer = 2;
  string name = 3;
  string symbol = 4;
  string description = 5;
  string uri = 6;
  string uri_hash = 7;
  google.protobuf.Any data = 8;
}

